--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -14,8 +14,8 @@
   "loginButton": "دخول",
   "signupButton": "إنشاء حساب",
   "continueWithGoogle": "المتابعة بواسطة جوجل",
-  "noAccountPrompt": "ليس لديك حساب؟ أنشئ حسابًا",
-  "haveAccountPrompt": "لديك حساب بالفعل؟ سجل الدخول",
+  "noAccountPrompt": "ليس لديك حساب؟",
+  "haveAccountPrompt": "لديك حساب بالفعل؟",
   "nicknamePrompt": "اختر اسمًا مستعارًا...",
   "nicknameHint": "الاسم المستعار",
   "saveButton": "حفظ",
@@ -51,8 +51,8 @@
   "profileSubCategoriesCompletedLabel": "الفئات الفرعية المنجزة:",
   "profileCategoriesCompletedLabel": "الفئات المنجزة:",
   "categoriesSectionTitle": "الفئات",
-  "ongoingCategoriesSectionTitle": "تتابع الآن (فئات)",
-  "ongoingSubCategoriesSectionTitle": "تتابع الآن (فئات فرعية)",
+  "ongoingCategoriesSectionTitle": "الفئات التي تتابع الآن",
+  "ongoingSubCategoriesSectionTitle": "الفئات الفرعية التي تتابع الآن",
   "showAllButton": "عرض الكل",
   "topicsTitle": "المواضيع",
   "lessonsTitle": "الدروس",
